--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="Images/Musa.png" alt="Musa's Profile Picture"></td>
+      <td><img src="Images/Musa.png" width="200" height="200" alt="Musa's Profile Picture"></td>
       <td><p><em>A staff in <strong>NFIU ICT Department</strong></em></p>
 
       <p>Musa Babagana was born in Bama town of Borno State. He attended Kaigamari Primary School from
